Deleted TestingManager,and using SubectManager

--- a/ProjectVanilla/ProjectVanilla.csproj
+++ b/ProjectVanilla/ProjectVanilla.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestingManager.cs" />
+    <Compile Include="SubjectManager.cs" />
     <Compile Include="ConfigureManager.cs" />
     <Compile Include="FormTesting.cs">
       <SubType>Form</SubType>
